@@ -108,6 +108,8 @@
 #define IDS_PRIOAUTOVERYLOW				4069
 //<<< WiZaRd::Improved Auto Prio
 #define IDS_WAITING_USERS				4070 //>>> WiZaRd::Queued Count
+#define IDS_HEALTH						4071 //>>> WiZaRd::FileHealth
+#define IDS_NO_BAD_BEHAVIOUR_DETECTED	4072 //>>> WiZaRd::ClientAnalyzer
 //#endif
 
 // this line is needed or we get a "fatal error RC1004: unexpected end of file found" - thanks for those wonderful bugs, Microsoft!
